--- a/css/main.css
+++ b/css/main.css
@@ -414,6 +414,8 @@ main {
   top: 200vh;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 95%;
+  height: 70%;
 }
 
 .puntos-gsap {
@@ -427,8 +429,8 @@ code, .card .line-numbers {
 
 .card {
   position: relative;
-  width: 30rem;
-  height: 18rem;
+  width: 100%;
+  height: 100%;
   perspective: 150rem;
 }
 .card-front, .card-back {
@@ -444,6 +446,7 @@ code, .card .line-numbers {
   transition: 0.9s cubic-bezier(0.25, 0.8, 0.25, 1);
   backface-visibility: hidden;
   overflow: hidden;
+  padding: 0px 10px 0px 35px;
 }
 .card-front:before, .card-front:after, .card-back:before, .card-back:after {
   position: absolute;
@@ -1028,6 +1031,13 @@ span a {
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+  .contenedor-card {
+    width: 500px;
+    height: 300px;
+  }
+  .card-front, .card-back {
+    padding: 0;
+  }
   .nav-menu-1 li {
     margin: 0.5em 1.5em;
   }
@@ -1047,6 +1057,13 @@ span a {
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1239px) {
+  .contenedor-card {
+    width: 500px;
+    height: 300px;
+  }
+  .card-front, .card-back {
+    padding: 0;
+  }
   .nav-menu-1 li {
     margin: 10px 10px;
   }
@@ -1066,6 +1083,13 @@ span a {
   }
 }
 @media screen and (min-width: 1240px) and (max-width: 2559px) {
+  .contenedor-card {
+    width: 500px;
+    height: 300px;
+  }
+  .card-front, .card-back {
+    padding: 0;
+  }
   .nav-menu-1 li {
     margin: 0.5em 1.5em;
   }
@@ -1085,6 +1109,13 @@ span a {
   }
 }
 @media screen and (min-width: 2560px) {
+  .contenedor-card {
+    width: 500px;
+    height: 300px;
+  }
+  .card-front, .card-back {
+    padding: 0;
+  }
   .nav-menu-1 li {
     margin: 0.5em 1.5em;
   }
