--- a/scss/_mqueries.scss
+++ b/scss/_mqueries.scss
@@ -23,6 +23,18 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+  .contenedor-card {
+    width: 500px;
+    height: 300px;
+  }
+
+  .card {
+    &-front,
+    &-back {
+      padding: 0;
+    }
+  }
+
   .nav-menu-1 li {
     margin: 0.5em 1.5em;
   }
@@ -44,6 +56,16 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1239px) {
+  .contenedor-card {
+    width: 500px;
+    height: 300px;
+  }
+  .card {
+    &-front,
+    &-back {
+      padding: 0;
+    }
+  }
   .nav-menu-1 li {
     margin: 10px 10px;
   }
@@ -64,6 +86,16 @@
 }
 
 @media screen and (min-width: 1240px) and (max-width: 2559px) {
+  .contenedor-card {
+    width: 500px;
+    height: 300px;
+  }
+  .card {
+    &-front,
+    &-back {
+      padding: 0;
+    }
+  }
   .nav-menu-1 li {
     margin: 0.5em 1.5em;
   }
@@ -84,6 +116,16 @@
 }
 
 @media screen and (min-width: 2560px) {
+  .contenedor-card {
+    width: 500px;
+    height: 300px;
+  }
+  .card {
+    &-front,
+    &-back {
+      padding: 0;
+    }
+  }
   .nav-menu-1 li {
     margin: 0.5em 1.5em;
   }
