--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,11 +1,11 @@
 @import "variables";
-//@import "cj_anim";
 @import "bg_anim";
 @import "menu_botones";
 @import "swiper";
 @import "main";
 @import "portada";
 @import "profile_card_1";
+@import "profile_card_2";
 @import "section_servicios";
 @import "section_about";
 @import "section_contacto";
