--- a/scss/_section_about.scss
+++ b/scss/_section_about.scss
@@ -1,6 +1,8 @@
 .fondo-about {
   height: 100%;
-  width: 100%;
+  width: 95%;
   position: absolute;
   top: 100vh;
+  background-color: rgb(250, 235, 215, 0.3);
+  //padding: 0 50px;
 }
