--- a/scss/_section_about.scss
+++ b/scss/_section_about.scss
@@ -3,6 +3,6 @@
   width: 95%;
   position: absolute;
   top: 100vh;
-  background-color: rgb(250, 235, 215, 0.3);
+  //background-color: rgb(250, 235, 215, 0.3);
   //padding: 0 50px;
 }
