--- a/scss/_section_servicios.scss
+++ b/scss/_section_servicios.scss
@@ -11,7 +11,7 @@
 }
 
 .txt-servicios {
-  color: white;
+  color: $glb-brand-color01;
   position: absolute;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
