--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,6 +18,10 @@ $glb-fs: 1rem;
 $glb-fs-lh: 2rem;
 $glb-fs-small: 0.9rem;
 $glb-fs-small-lh: 1.5rem;
-$glb-color-overlay: rgba(0, 0, 0, 0.9);
+$glb-color-overlay: rgba(255, 255, 255, 0.5);
 $glb-color-opacity-brand-1: rgb(1, 52, 82, 0.7);
 $glb-color-opacity-brand-2: rgb(171, 108, 24, 0.5);
+
+$glb-color-pdegradado-1-oscuro: #cfd5de;
+$glb-color-pdegradado-1-medio: #dee3eb;
+$glb-color-pdegradado-1-claro: #e7edf6;
