--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -51,24 +51,46 @@ main {
 
 #section-1 {
   z-index: 82;
-  background-color: $glb-brand-color01;
-  background-image: linear-gradient(to right, $glb-brand-color01, $glb-brand-color01-deg);
+  background: $glb-color-pdegradado-1-oscuro;
+  background: linear-gradient(
+    90deg,
+    $glb-color-pdegradado-1-oscuro 0%,
+    $glb-color-pdegradado-1-medio 25%,
+    $glb-color-pdegradado-1-claro 50%,
+    $glb-color-pdegradado-1-medio 75%,
+    $glb-color-pdegradado-1-oscuro 100%
+  );
   top: 0px;
   left: 0px;
 }
 
 #section-2 {
   z-index: 81;
-  background-color: $glb-brand-color01;
-  background-image: linear-gradient(to right, $glb-brand-color01, $glb-brand-color01-deg);
+  background: $glb-color-pdegradado-1-oscuro;
+  background: linear-gradient(
+    90deg,
+    $glb-color-pdegradado-1-oscuro 0%,
+    $glb-color-pdegradado-1-medio 25%,
+    $glb-color-pdegradado-1-claro 50%,
+    $glb-color-pdegradado-1-medio 75%,
+    $glb-color-pdegradado-1-oscuro 100%
+  );
   top: 0px;
   left: 0px;
 }
 
 #section-3 {
   z-index: 83;
-  background-color: $glb-brand-color01;
-  background-image: linear-gradient(to right, $glb-brand-color01, $glb-brand-color01-deg);
+  background: $glb-color-pdegradado-1-oscuro;
+  background: linear-gradient(
+    90deg,
+    $glb-color-pdegradado-1-oscuro 0%,
+    $glb-color-pdegradado-1-medio 25%,
+    $glb-color-pdegradado-1-claro 50%,
+    $glb-color-pdegradado-1-medio 75%,
+    $glb-color-pdegradado-1-oscuro 100%
+  );
+
   scale: 0.9;
   top: 0px;
   left: -100vw;
@@ -76,8 +98,8 @@ main {
 
 #section-4 {
   z-index: 84;
-  background-color: $glb-brand-color01;
-  background-image: linear-gradient(to right, $glb-brand-color01, $glb-brand-color01-deg);
+  background-color: $glb-color-pdegradado-1-oscuro;
+  background-image: linear-gradient(to right, $glb-color-pdegradado-1-oscuro, $glb-color-pdegradado-1-claro);
   scale: 0.9;
   top: 0px;
   left: 100vw;
@@ -85,8 +107,8 @@ main {
 
 #section-5 {
   z-index: 85;
-  background-color: $glb-brand-color01;
-  background-image: linear-gradient(to right, $glb-brand-color01, $glb-brand-color01-deg);
+  background-color: $glb-color-pdegradado-1-oscuro;
+  background-image: linear-gradient(to right, $glb-color-pdegradado-1-oscuro, $glb-color-pdegradado-1-claro);
   scale: 0.9;
   top: -100vh;
   left: 0px;
