--- a/scss/_portada.scss
+++ b/scss/_portada.scss
@@ -10,18 +10,13 @@
   font-family: exo, ubuntu, "segoe ui", helvetica, arial, sans-serif;
   color: $color;
   font-size: $fs;
-  line-height: 1.5rem;
+  //line-height: 1.5rem;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 700;
 }
 
 .nombre {
-  @include texto-grande(#ffffff, 5rem);
-}
-
-.nombre-opcion {
-  @include texto-grande(#ffffff, 2.5rem);
-  margin-bottom: 40px;
+  @include texto-grande($glb-brand-color01, 5rem);
 }
 
 @mixin latido-1 {
@@ -30,7 +25,7 @@
 }
 
 #precarga {
-  @include latido-1;
+  //@include latido-1;
   @include absolute-centrado(-50%, 0);
   z-index: 100;
 }
