--- a/scss/_profile_card_2.scss
+++ b/scss/_profile_card_2.scss
@@ -1,15 +1,13 @@
-@import "https://fonts.googleapis.com/css?family=Open+Sans:300,400";
-
-%reset {
+/* %reset {
   margin: 0;
   padding: 0;
-}
+} */
 %flex {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-$maincolor: #009688;
+$maincolor: $glb-brand-color-analogo-oscuro-2;
 
 @mixin animated($timein: null, $delay: null) {
   transition: all $timein ease-in-out;
@@ -25,30 +23,16 @@ $maincolor: #009688;
   position: relative;
   display: flex;
   justify-content: center;
-  //animation: animatop 0.9s cubic-bezier(0.425, 1.14, 0.47, 1.125) forwards;
 }
 
 .card-1 {
-  @include dimensions(100%, 170px);
+  @include dimensions(95%, 170px);
   padding: 20px;
   border-radius: 3px;
   background-color: white;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   position: relative;
   overflow: hidden;
-
-  /*   &:after {
-    content: "";
-    display: block;
-    width: 250px;
-    height: 400px;
-    background: cadetblue;
-    position: absolute;
-    top: -40%;
-    left: -60%;
-    transform: rotate(-30deg);
-    //animation: rotatemagic 0.75s cubic-bezier(0.425, 1.04, 0.47, 1.105) 1s both;
-  } */
 }
 
 .contenedor-profile-card {
@@ -64,7 +48,7 @@ $maincolor: #009688;
   display: block;
   width: 270px;
   height: 580px;
-  background: cadetblue;
+  background: $glb-brand-color01;
   position: absolute;
   top: -40%;
   left: -150%;
@@ -75,7 +59,7 @@ $maincolor: #009688;
   padding: 10px 20px;
   border-radius: 3px;
   background-color: #ececec;
-  width: 95%;
+  width: 90%;
   height: 100px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   position: absolute;
@@ -83,12 +67,17 @@ $maincolor: #009688;
   //left: 10px;
   bottom: 10px;
   @extend %flex;
-  //animation: animainfos 0.5s cubic-bezier(0.425, 1.04, 0.47, 1.105) 0.75s forwards;
   i {
     font-size: 1.6em;
     margin: 0px 6px;
-    opacity: 0.6;
+    opacity: 0.8;
+    color: $glb-brand-color-analogo-oscuro-2;
   }
+}
+
+.icon-skill {
+  position: relative;
+  top: -100px;
 }
 
 .badgescard-flex {
@@ -131,37 +120,3 @@ $maincolor: #009688;
 .ocultar-img {
   display: none;
 }
-
-/* @keyframes animatop {
-  0% {
-    opacity: 0;
-    bottom: -500px;
-  }
-  100% {
-    opacity: 1;
-    bottom: 0px;
-  }
-} */
-
-/* @keyframes animainfos {
-  0% {
-    bottom: 10px;
-  }
-  100% {
-    bottom: -42px;
-  }
-} */
-
-/* @keyframes rotatemagic {
-  0% {
-    opacity: 0;
-    transform: rotate(-0deg);
-    top: -24px;
-    left: -253px;
-  }
-  100% {
-    transform: rotate(-30deg);
-    top: -24px;
-    left: -78px;
-  }
-} */
