--- a/scss/_section_about.scss
+++ b/scss/_section_about.scss
@@ -1,8 +1,18 @@
 .fondo-about {
   height: 100%;
-  width: 95%;
+  width: 100%;
   position: absolute;
   top: 100vh;
   //background-color: rgb(250, 235, 215, 0.3);
-  //padding: 0 50px;
+  padding: 0 2.5%;
+  //background-color: rgb(174, 174, 174);
+  /*   background: rgb(210, 211, 222);
+  background: linear-gradient(
+    90deg,
+    rgba(210, 211, 222, 1) 0%,
+    rgba(225, 226, 238, 1) 5%,
+    rgba(237, 238, 251, 1) 50%,
+    rgba(225, 226, 238, 1) 95%,
+    rgba(210, 211, 222, 1) 100%
+  ); */
 }
